force-app/main/default/objects/Risk_Profile__c/Risk_Profile__c.object-meta.xml
<CustomObject>
    <label>Risk Profile</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Risk Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>