force-app/main/default/objects/Risk_Profile__c/fields/Account_Risk__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account risk record from where risk was generated</description>
    <label>Account Risk</label>
    <referenceTo>Account_Risk__c</referenceTo>
    <relationshipLabel>Risk Profiles</relationshipLabel>
    <relationshipName>Risk_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>