force-app/main/default/objects/Risk_Profile__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risk_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>