force-app/main/default/objects/Risk_Profile__c/fields/Action_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_Manager__c</fullName>
    <formula>Action_Owner__r.Manager.FirstName +&quot; &quot;+  Action_Owner__r.Manager.LastName</formula>
    <label>Action Owner Manager</label>
    <type>Text</type>
</CustomField>