force-app/main/default/objects/Risk_Profile__c/fields/ACV_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>ACV_At_Risk__c</fullName>
    <label>ACV At Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>