force-app/main/default/objects/Risk_Profile__c/fields/Created_Team__c.field-meta.xml
<CustomField>
    <fullName>Created_Team__c</fullName>
    <formula>IF(
  CONTAINS(LOWER(CreatedBy.Title), &quot;customer success manager&quot;),
  &quot;CSM&quot;,
  IF(
    CONTAINS(LOWER(CreatedBy.Title), &quot;customer experience manager&quot;),
    &quot;CEM&quot;,
    IF(
      CONTAINS(LOWER(CreatedBy.Title), &quot;field consultant&quot;),
      &quot;PS&quot;,
      IF(
        CONTAINS(LOWER(CreatedBy.Title), &quot;renewals&quot;),
        &quot;Renewals&quot;,
        IF(
          CONTAINS(LOWER(CreatedBy.Title), &quot;customer success engineer&quot;),
          &quot;Support&quot;,
          IF(
            CONTAINS(LOWER(CreatedBy.Title), &quot;account executive&quot;),
            &quot;Account Team&quot;,
            &quot;Other&quot;
          )
        )
      )
    )
  )
)</formula>
    <label>Created Team</label>
    <type>Text</type>
</CustomField>