force-app/main/default/objects/Risk_Profile__c/fields/CSM_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CSM_Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Risk Profiles (CSM Case Number)</relationshipLabel>
    <relationshipName>CSM_Risk_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>