force-app/main/default/objects/Risk_Profile__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <formula>IF( AND(Owner:User.ManagerId ==  $User.Id, ISPICKVAL(Risk_Validation_Status__c, &quot;Pending Approval&quot;) )  , true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Approver</label>
    <type>Checkbox</type>
</CustomField>