force-app/main/default/objects/Risk_Profile__c/fields/Current_Status_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Next_Steps__c</fullName>
    <label>Current Status &amp; Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>