force-app/main/default/objects/Risk_Profile__c/fields/CXScoreClosure__c.field-meta.xml
<CustomField>
    <fullName>CXScoreClosure__c</fullName>
    <label>CX Score Closure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>