force-app/main/default/objects/Risk_Profile__c/fields/CXScoreCreation__c.field-meta.xml
<CustomField>
    <fullName>CXScoreCreation__c</fullName>
    <label>CX Score Creation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>