force-app/main/default/objects/Risk_Profile__c/fields/DNT_Reason__c.field-meta.xml
<CustomField>
    <fullName>DNT_Reason__c</fullName>
    <inlineHelpText>Select Reason for DNT</inlineHelpText>
    <label>DNT Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dark site</fullName>
            </value>
            <value>
                <fullName>RSCP account</fullName>
            </value>
            <value>
                <fullName>Snooze</fullName>
            </value>
            <value>
                <fullName>MSP Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>