force-app/main/default/objects/Risk_Profile__c/fields/DNT_Snooze__c.field-meta.xml
<CustomField>
    <fullName>DNT_Snooze__c</fullName>
    <description>Snooze date for DNT</description>
    <inlineHelpText>Snooze date for DNT</inlineHelpText>
    <label>DNT Snooze</label>
    <type>Date</type>
</CustomField>