force-app/main/default/objects/Risk_Profile__c/fields/Do_Not_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do Not Trigger</inlineHelpText>
    <label>Do Not Trigger</label>
    <type>Checkbox</type>
</CustomField>