force-app/main/default/objects/Risk_Profile__c/fields/Earliest_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Renewal_Date__c</fullName>
    <formula>Earliest_Renewal_Opportunity__r.Renewal_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Renewal Date</label>
    <type>Date</type>
</CustomField>