force-app/main/default/objects/Risk_Profile__c/fields/Earliest_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Earliest Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Risk Profiles (Earliest Renewal Opportunity)</relationshipLabel>
    <relationshipName>Risk_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>