force-app/main/default/objects/Risk_Profile__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Risk Profiles (Product Feature)</relationshipLabel>
    <relationshipName>Risk_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>