force-app/main/default/objects/Risk_Profile__c/fields/Entitlement_ACV__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_ACV__c</fullName>
    <formula>Entitlement__r.AnnualContractValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>