force-app/main/default/objects/Risk_Profile__c/fields/Governance_Owner__c.field-meta.xml
<CustomField>
    <fullName>Governance_Owner__c</fullName>
    <formula>IF(ISNULL(Owner:Queue.QueueName), Owner:User.FirstName + &quot; &quot; +Owner:User.LastName, Owner:Queue.QueueName)</formula>
    <label>Governance Owner</label>
    <type>Text</type>
</CustomField>