force-app/main/default/objects/Risk_Profile__c/fields/HealthAssessment__c.field-meta.xml
<CustomField>
    <fullName>HealthAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Assessment</label>
    <type>Checkbox</type>
</CustomField>