force-app/main/default/objects/Risk_Profile__c/fields/In_Snooze__c.field-meta.xml
<CustomField>
    <fullName>In_Snooze__c</fullName>
    <formula>IF( AND(  Do_Not_Trigger__c ,  DNT_Snooze__c &gt;  TODAY() ) , true , false )</formula>
    <label>In Snooze</label>
    <type>Checkbox</type>
</CustomField>