force-app/main/default/objects/Risk_Profile__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>OR(
    ISPICKVAL(Risk_Status__c, &quot;Mitigated&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Entitlement Expired&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Entitlement Churn&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Account Churn&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Lost&quot;),
    ISPICKVAL(Risk_Status__c, &quot;At Risk&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Partially Mitigated&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Downsell&quot;),
    ISPICKVAL(Risk_Status__c, &quot;CX health score improved&quot;),
    ISPICKVAL(Risk_Status__c, &quot;No Risk&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Invalid&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Requires modification of CX Score Logic&quot;),
    ISPICKVAL(Risk_Status__c, &quot;No mitigation possible&quot;),
    ISPICKVAL(Risk_Status__c, &quot;Less time to mitigate&quot;)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>