force-app/main/default/objects/Risk_Profile__c/fields/Mitigation_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mitigation Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Risk Profiles</relationshipLabel>
    <relationshipName>Risk_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>