force-app/main/default/objects/Risk_Profile__c/fields/ML_Risk__c.field-meta.xml
<CustomField>
    <fullName>ML_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it a ML risk</description>
    <inlineHelpText>Is it a ML risk</inlineHelpText>
    <label>ML Risk</label>
    <type>Checkbox</type>
</CustomField>