force-app/main/default/objects/Risk_Profile__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field update when owner inserted or updated on risk profile</description>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risk_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>