force-app/main/default/objects/Risk_Profile__c/fields/Owner_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Name__c</fullName>
    <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Name</label>
    <type>Text</type>
</CustomField>