force-app/main/default/objects/Risk_Profile__c/fields/Previous_Validation_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Validation_Status_Value__c</fullName>
    <label>Previous Validation Status Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>