force-app/main/default/objects/Risk_Profile__c/fields/Primary_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Risk_Reason__c</fullName>
    <label>Primary Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Account Relationship</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Customer Related</fullName>
            </value>
            <value>
                <fullName>Customer Fit / Maturity</fullName>
            </value>
            <value>
                <fullName>Support issues</fullName>
            </value>
            <value>
                <fullName>Rubrik-related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>