force-app/main/default/objects/Risk_Profile__c/fields/Product_Pillar_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_2__c</fullName>
    <description>Product Pillar 2</description>
    <label>Product Pillar 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>