force-app/main/default/objects/Risk_Profile__c/fields/Rejected_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Comments__c</fullName>
    <description>Mandatory field for the manager to update the
reason for rejecting the invalid status request by the risk governance
owner.</description>
    <label>Rejected Comments</label>
    <type>TextArea</type>
</CustomField>