force-app/main/default/objects/Risk_Profile__c/fields/Risk_Age__c.field-meta.xml
<CustomField>
    <fullName>Risk_Age__c</fullName>
    <formula>MAX(
    IF(
        IsClosed__c,
        Risk_Closed_Date__c - DATEVALUE(CreatedDate),
        TODAY() - DATEVALUE(CreatedDate)
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>