force-app/main/default/objects/Risk_Profile__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <description>Low
Medium
High</description>
    <label>Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement Risk</fullName>
            </value>
            <value>
                <fullName>CX Score Risk</fullName>
            </value>
            <value>
                <fullName>Renewal Sentiment Risk</fullName>
            </value>
            <value>
                <fullName>CSM Sentiment Risk</fullName>
            </value>
            <value>
                <fullName>Prediction Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>