force-app/main/default/objects/Risk_Profile__c/fields/Risk_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closed_Date__c</fullName>
    <description>The date, when risk was closed.</description>
    <inlineHelpText>The date, when risk was closed.</inlineHelpText>
    <label>Risk Closed Date</label>
    <type>Date</type>
</CustomField>