force-app/main/default/objects/Risk_Profile__c/fields/Risk_Origin__c.field-meta.xml
<CustomField>
    <fullName>Risk_Origin__c</fullName>
    <label>Risk Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>