force-app/main/default/objects/Risk_Profile__c/fields/Risk_Priority__c.field-meta.xml
<CustomField>
    <fullName>Risk_Priority__c</fullName>
    <inlineHelpText>How soon the renewal is happening</inlineHelpText>
    <label>Risk Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>