force-app/main/default/objects/Risk_Profile__c/fields/Risk_Profile_Closed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile_Closed__c</fullName>
    <formula>Mitigation_Case_Number__r.Mitigation_Case_Closed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Profile Closed</label>
    <type>Checkbox</type>
</CustomField>