force-app/main/default/objects/Risk_Profile__c/fields/Risk_Reason_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason_Additional_Comments__c</fullName>
    <label>Risk Reason Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>