force-app/main/default/objects/Risk_Profile__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Mitigated</fullName>
            </value>
            <value>
                <fullName>Entitlement Expired</fullName>
            </value>
            <value>
                <fullName>Entitlement Churn</fullName>
            </value>
            <value>
                <fullName>Account Churn</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Partially Mitigated</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
            <value>
                <fullName>CX health score improved</fullName>
            </value>
            <value>
                <fullName>No Risk</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Requires modification of CX Score Logic</fullName>
            </value>
            <value>
                <fullName>No mitigation possible</fullName>
            </value>
            <value>
                <fullName>Less time to mitigate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>