force-app/main/default/objects/Risk_Profile__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Risk</fullName>
            </value>
            <value>
                <fullName>Entitlement Risk</fullName>
            </value>
            <value>
                <fullName>Feature/Product Risk</fullName>
            </value>
            <value>
                <fullName>Discount and Extension</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>