force-app/main/default/objects/Risk_Profile__c/fields/Risk_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Validation_Status__c</fullName>
    <label>Risk Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Snoozed / DNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>