force-app/main/default/objects/Risk_Profile__c/fields/Secondary_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Risk_Reason__c</fullName>
    <label>Secondary Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Risk_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Lack of Adoption</fullName>
            </value>
            <value>
                <fullName>Value Realization</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>Key Sponsor Turnover</fullName>
            </value>
            <value>
                <fullName>Lack of Engagement</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Use Case / Feature Mismatch</fullName>
            </value>
            <value>
                <fullName>In-stability and Downtime</fullName>
            </value>
            <value>
                <fullName>Product Defect</fullName>
            </value>
            <value>
                <fullName>Lack of functionality</fullName>
            </value>
            <value>
                <fullName>Business Requirements not met</fullName>
            </value>
            <value>
                <fullName>Product roadmap deviations</fullName>
            </value>
            <value>
                <fullName>Contact not Responding</fullName>
            </value>
            <value>
                <fullName>Dissolved / Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>Project on Hold / Project De-Prioritization</fullName>
            </value>
            <value>
                <fullName>Cloud Readiness</fullName>
            </value>
            <value>
                <fullName>Right Sizing</fullName>
            </value>
            <value>
                <fullName>Support Issues</fullName>
            </value>
            <value>
                <fullName>Budget Constraint</fullName>
            </value>
            <value>
                <fullName>Cloud Migration</fullName>
            </value>
            <value>
                <fullName>Sales Play not valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>