force-app/main/default/objects/Risk_Profile__c/fields/Snooze__c.field-meta.xml
<CustomField>
    <fullName>Snooze__c</fullName>
    <inlineHelpText>DNT Snooze date</inlineHelpText>
    <label>Snooze</label>
    <type>Date</type>
</CustomField>