force-app/main/default/objects/Risk_Profile__c/fields/Validation_Status_Approval__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status_Approval__c</fullName>
    <label>Validation Status Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>