force-app/main/default/objects/Risk_Profile__c/validationRules/DNT_Snooze_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DNT_Snooze_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(DNT_Reason__c, &quot;Snooze&quot;),
    ISBLANK(DNT_Snooze__c)
)</errorConditionFormula>
    <errorDisplayField>DNT_Snooze__c</errorDisplayField>
    <errorMessage>DNT Snooze is required when DNT Reason is set to &apos;Snooze&apos;</errorMessage>
</ValidationRule>