force-app/main/default/objects/Risk_Profile__c/validationRules/Prevent_Invalid_to_Valid_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Invalid_to_Valid_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Risk_Validation_Status__c), &quot;Invalid&quot;),
    ISPICKVAL(Risk_Validation_Status__c, &quot;Valid&quot;)
)</errorConditionFormula>
    <errorDisplayField>Risk_Validation_Status__c</errorDisplayField>
    <errorMessage>Once a Risk Profile is marked as &apos;Invalid&apos;, it cannot be changed back to &apos;Valid&apos;. Create a new Risk Profile instead.</errorMessage>
</ValidationRule>