force-app/main/default/objects/Risk_Profile__c/validationRules/Prevent_Valid_to_Invalid_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Valid_to_Invalid_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Risk_Validation_Status__c), &quot;Valid&quot;),
OR( 
ISPICKVAL(Risk_Validation_Status__c, &quot;Pending Approval&quot;), ISPICKVAL(Risk_Validation_Status__c, &quot;Invalid&quot;) 
)
)</errorConditionFormula>
    <errorDisplayField>Risk_Validation_Status__c</errorDisplayField>
    <errorMessage>Once a Risk Profile is marked as &apos;Valid&apos;, it cannot be changed back to &apos;Invalid&apos;. Create a new Risk Profile instead.</errorMessage>
</ValidationRule>