force-app/main/default/objects/Risk_Profile__c/validationRules/Risk_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL ( DNT_Reason__c , &apos;&apos; ) , Do_Not_Trigger__c )</errorConditionFormula>
    <errorDisplayField>DNT_Reason__c</errorDisplayField>
    <errorMessage>Please select a reason for Do Not Trigger</errorMessage>
</ValidationRule>