force-app/main/default/objects/Risk_Profile__c/listViews/Risk_Governance_Team_Risk_Profile.listView-meta.xml
<ListView>
    <fullName>Risk_Governance_Team_Risk_Profile</fullName>
    <filterScope>Queue</filterScope>
    <label>Risk Governance Team</label>
    <queue>Risk_Governance_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>